tests/fixtures/invalid/pow_bytes_int_float.py
# Cannot call pow() with Bytes, Int, Float
x = pow(b"hello", 1, 1.0)
